--- a/myp/src/main/webapp/WEB-INF/views/new전자결재.html
+++ b/myp/src/main/webapp/WEB-INF/views/new전자결재.html
@@ -106,16 +106,15 @@
     <div class="container">
         <div class="content">
            <!-- 내용  -->
-            <p>규정 이외의 내용에 대한 항목을 고객에게 적용하여 차후 더 큰 문제 발생을 최소화하기 위해 해당 가입자를 아래와 같은 사유로 인정하여 규정 외 허가를 요청합니다.</p>
+            <p>규정 이외의 내용에 대한 항목을 고객에게 적용하여 니다.</p>
             <h3>1. 고객정보</h3>
-            <p>- 고객번호: 3930404579<br>
-               - 고객명: 김정숙<br>
-               - 주&nbsp;&nbsp;&nbsp;소: 부산 부산진구 가야1동 / 전남 해남군 해남읍 해리</p>
+            <p>- 고객번호: aaaa<br>
+               - 고객명: 김정<br>
+               - 주&nbsp;&nbsp;&nbsp;소: 부산 부산구 동 /  해읍 해리</p>
             <h3>2. 민원내용</h3>
-            <p>- 오가이렌트 상품 관련 채권 추심 및 채무 불이행 동시 보류 요청</p>
+            <p>- 오가 요청</p>
             <h3>3. 조치 요청</h3>
-            <p>- 김정숙 고객으로 등록 되어 있는 렌탈 상품 관련 씨* 파트너스로 명의 변경 진행으로 별도 관리 중 또한 채무 미납금으로 존재 하는 3,079,910원에 대해 김정숙 고객에게 피해 되지 않도록 ITSM을 통한 관리로 이중 이동 중 진행 중<br>
-               - 처리 진행 중 사항에 시간 추가 필요로 3월 31일까지 채권 추심 및 채무 불이행 동시 되지 않도록 보류 요청 드립니다.</p>
+            <p>- 김정숙 고객으로 등록  드립니다.</p>
             <p>이상 입니다.</p>
         </div>
     </div>
@@ -136,7 +135,7 @@
             <td>합의</td>
             <td>합의</td>
             <td>송석훈</td>
-            <td>부산고객만족1팀</td>
+            <td>부산1팀</td>
             <td>2024-05-05</td>
             <td class="opinion">합의 합니다</td>
         </tr>
@@ -144,7 +143,7 @@
             <td>합의</td>
             <td>합의</td>
             <td>송석훈</td>
-            <td>부산고객만족1팀</td>
+            <td>부산1팀</td>
             <td>2024-05-05</td>
             <td class="opinion">합의 합니다</td>
         </tr>
@@ -152,7 +151,7 @@
             <td>결재</td>
             <td></td>
             <td>송석훈</td>
-            <td>부산고객만족1팀</td>
+            <td>부산1팀</td>
             <td>2024-05-05</td>
             <td class="opinion">합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다합의 합니다</td>
         </tr>
