--- a/myp/src/main/webapp/vue3_pjt/vue3/src/style.css
+++ b/myp/src/main/webapp/vue3_pjt/vue3/src/style.css
@@ -23,11 +23,14 @@ a:hover {
 }
 
 body {
+  /*
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  */
+  
 }
 
 h1 {
@@ -59,9 +62,11 @@ button:focus-visible {
 }
 
 #app {
+  /*
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  */
   text-align: center;
 }
 
@@ -77,3 +82,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+html { overflow-y:scroll; }
+
